--- a/nord-dotfiles/.config/i3/config
+++ b/nord-dotfiles/.config/i3/config
@@ -9,7 +9,7 @@ exec --no-startup-id dunst
 exec --no-startup-id polybar main
 
 # --- KEYBINDS ---
-bindsym $mod+d exec rofi -show run
+bindsym $mod+d exec rofi -show drun -theme ~/.config/rofi/config.rasi
 bindsym $mod+Shift+q kill
 bindsym $mod+Shift+r restart
 bindsym $mod+f fullscreen toggle
